final version (maybe)

--- a/src/main/resources/templates/admin/index_to-work.html
+++ b/src/main/resources/templates/admin/index_to-work.html
@@ -117,8 +117,7 @@
                         </div>
                         <div class="modal-body">
                             <div class="form-outline">
-                                <textarea class="form-control" id="reasons_message" rows="4" name="reasons_message"></textarea>
-                                <label class="form-label" for="reasons_message">Опишите пожалуйста причины изменения</label>
+                                <textarea class="form-control" id="reasons_message" rows="4" name="reasons_message" placeholder="Опишите пожалуйста причины изменения"></textarea>
                             </div>
                         </div>
                         <div class="modal-footer">
