--- a/src/main/resources/templates/tutor/index_new.html
+++ b/src/main/resources/templates/tutor/index_new.html
@@ -3,148 +3,142 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="shortcut icon" th:href="@{/content/images/faviconV2.ico}" type="image/x-icon">
-<link  rel="stylesheet" th:href="@{/content/css/bootstrap.min.css}">
+<link rel="stylesheet" th:href="@{/content/css/bootstrap.min.css}">
 <link rel="stylesheet" th:href="@{/content/css/style.css}">
 <title>Highpark Events</title>
 </head>
 
 <body>
 
-    <header class="header" id="myHeader">
-        <div class="container">
-            <div class="row">
-                <div class="col-1">
-                    <div class="main-image">
-                        <img src="https://grozpark.ru/wp-content/uploads/2021/09/Logo-Highpark-White.png" alt="(((">
-                    </div>
-                </div>
-                <div class="col-10">
-                    <h2 class="text-center text-white">Регистрация мероприятий в Хайпарке ГГНТУ</h2>
-                </div>
-                <div class="col-1">
-                    <form th:action="@{/logout}" th:method="POST">
-                        <button type="submit" class="btn btn-primary">Выйти</button>
-                    </form>
+<header class="header" id="myHeader">
+    <div class="container">
+        <div class="row">
+            <div class="col-1">
+                <div class="main-image">
+                    <img src="https://grozpark.ru/wp-content/uploads/2021/09/Logo-Highpark-White.png" alt="(((">
                 </div>
             </div>
+            <div class="col-10">
+                <h2 class="text-center text-white">Регистрация мероприятий в Хайпарке ГГНТУ</h2>
+            </div>
+            <div class="col-1">
+                <form th:action="@{/logout}" th:method="POST">
+                    <button type="submit" class="btn btn-primary">Выйти</button>
+                </form>
+            </div>
         </div>
-    </header>
+    </div>
+</header>
 
 
+<div class="container content">
+    <div class="my-form">
+        <form th:method="GET" th:action="@{/tutor/events/new}">
+            <button type="submit" class="btn btn-primary content-buttons">Новые</button>
+        </form>
 
-    <div class="container content">
-        <div class="my-form">
-            <form th:method="GET" th:action="@{/tutor/events/new}">
-                <button type="submit" class="btn btn-primary content-buttons">Новые</button>
+        <form th:method="GET" th:action="@{/tutor/events/to-work}">
+            <button type="submit" class="btn btn-primary content-buttons">В работе</button>
+        </form>
+
+        <form th:method="GET" th:action="@{/tutor/events/confirmed}">
+            <button type="submit" class="btn btn-primary content-buttons">
+                Одобренные
+            </button>
+        </form>
+    </div>
+
+
+    <div class="row text-center" th:each="eventForm : ${allEvents}">
+        <div class="col-12">
+
+            <hr>
+
+            <div class="cell">
+                <strong>Название мероприя:</strong>
+                <p th:text="${eventForm.getEvent_name()}">Образовательная программа «Роль семейных традиций в воспитании
+                    детей»</p>
+            </div>
+            <div class="cell">
+                <strong>Описание мероприя:</strong>
+                <p th:text="${eventForm.getEvent_description()}">Образовательная программа «Роль семейных традиций в
+                    воспитании детей» направлена на повышение знаний и компетенций родителей в вопросах внутрисемейных
+                    взаимоотношений на основе традиций, физического воспитания и развития детей.</p>
+            </div>
+            <div class="cell">
+                <strong>Организатор:</strong>
+                <p th:text="${eventForm.getUser_name()}">Хаджимурадова Мадина Рамзановна</p>
+            </div>
+            <div class="cell">
+                <strong>Должность:</strong>
+                <p th:text="${eventForm.getUser_post()}">Преподаватель</p>
+            </div>
+            <div class="cell">
+                <strong>Дата и время проведения:</strong>
+                <p th:text="${eventForm.getDate_and_time()}">
+                    17 июня, 09:00 — 18 июня, 15:00 по Московскому времени
+                </p>
+            </div>
+            <div class="cell">
+                <strong>Дата и время подачи заявки:</strong>
+                <p th:text="${eventForm.getDate_time_of_creation()}">
+                    17 июня, 09:00 — 18 июня, 15:00 по Московскому времени
+                </p>
+            </div>
+        </div>
+        <div class="my-event-form">
+            <form th:method="patch" th:action="@{/tutor/to-work/:{id}(id=${eventForm.getId()})}">
+                <button type="submit" class="btn btn-primary content-buttons">В работу</button>
             </form>
 
-            <form th:method="GET" th:action="@{/tutor/events/to-work}">
-                <button type="submit" class="btn btn-primary content-buttons">В работе</button>
-            </form>
-
-            <form th:method="GET" th:action="@{/tutor/events/confirmed}">
-                <button type="submit" class="btn btn-primary content-buttons">
-                    Одобренные
+            <form th:method="delete" th:action="@{/tutor/events/:{id}(id=${eventForm.getId()})}">
+                <button type="button" class="btn btn-primary content-buttons" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal">
+                    Отклонить
                 </button>
+                <input type="hidden" name="id" th:value="${eventForm.getId()}">
             </form>
+
+            <div class="detailed-button">
+                <form th:action="@{/tutor/events/:{id}(id=${eventForm.getId()})}" th:method="GET">
+                    <button type="submit" class="btn btn-primary content-buttons">
+                        Подробнее
+                    </button>
+                </form>
+            </div>
         </div>
 
 
-        <div class="row text-center" th:each="eventForm : ${allEvents}">
-            <div class="col-12">
-
-                <hr>
-
-                <div class="cell">
-                    <strong>Название мероприя:</strong>
-                    <p th:text="${eventForm.getEvent_name()}">Образовательная программа «Роль семейных традиций в воспитании детей»</p>
-                </div>
-                <div class="cell">
-                    <strong>Описание мероприя:</strong>
-                    <p th:text="${eventForm.getEvent_description()}">Образовательная программа «Роль семейных традиций в воспитании детей» направлена на повышение знаний и компетенций родителей в вопросах внутрисемейных взаимоотношений на основе традиций, физического воспитания и развития детей.</p>
-                </div>
-                <div class="cell">
-                    <strong>Организатор:</strong>
-                    <p th:text="${eventForm.getUser_name()}">Хаджимурадова Мадина Рамзановна</p>
-                </div>
-                <div class="cell">
-                    <strong>Должность:</strong>
-                    <p th:text="${eventForm.getUser_post()}">Преподаватель</p>
-                </div>
-                <div class="cell">
-                    <strong>Дата и время проведения:</strong>
-                    <p th:text="${eventForm.getDate_and_time()}">
-                        17 июня, 09:00 — 18 июня, 15:00 по Московскому времени
-                    </p>
-                </div>
-                <div class="cell">
-                    <strong>Дата и время подачи заявки:</strong>
-                    <p th:text="${eventForm.getDate_time_of_creation()}">
-                        17 июня, 09:00 — 18 июня, 15:00 по Московскому времени
-                    </p>
-                </div>
-            </div>
-            <div class="my-event-form">
-                <form th:method="patch" th:action="@{/tutor/to-work/:{id}(id=${eventForm.getId()})}">
-                    <button type="submit" class="btn btn-primary content-buttons">В работу</button>
-                </form>
-
-                <form th:method="delete" th:action="@{/tutor/events/:{id}(id=${eventForm.getId()})}">
-                    <button type="button" class="btn btn-primary content-buttons" data-bs-toggle="modal" data-bs-target="#exampleModal">
-                        Отклонить
-                    </button>
-                    <input type="hidden" name="id" th:value="${eventForm.getId()}">
-                </form>
-
-                <div class="detailed-button">
-                    <form th:action="@{/tutor/events/:{id}(id=${eventForm.getId()})}" th:method="GET">
-                        <button type="submit" class="btn btn-primary content-buttons">
-                            Подробнее
-                        </button>
-                    </form>
-                </div>
-            </div>
-
-
-
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <form th:action="@{/tutor/to_change_message}" th:method="POST">
-
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">Причины отклонения</h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-
-                            <div class="modal-body">
-                                <div class="form-outline">
-                                    <textarea class="form-control" id="reasons_message" name="reasons_message"  rows="4"></textarea>
-                                    <label class="form-label" for="reasons_message">Опишите пожалуйста причины отклонения</label>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-
-
-                                <button type="submit" class="btn btn-primary" data-bs-dismiss="modal" >Отправить</button>
-                                <input type="hidden" id="id" name="id"  th:value="${eventForm.getId()}">
-
-
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <form th:action="@{/tutor/to_change_message}" th:method="POST">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Причины отклонения</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="form-outline">
+                                <textarea class="form-control" id="reasons_message" name="reasons_message"
+                                          rows="4" placeholder="Опишите пожалуйста причины отклонения"></textarea>
                             </div>
                         </div>
+                        <div class="modal-footer">
+                            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Отправить</button>
+                            <input type="hidden" id="id" th:name="id" th:value="${eventForm.getId()}">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                        </div>
                     </div>
-                </form>
-
-            </div>
+                </div>
+            </form>
 
         </div>
 
-
-
-
     </div>
-    <script type="text/javascript" th:src="@{/content/js/bootstrap.bundle.min.js}"></script>
+
+
+</div>
+<script type="text/javascript" th:src="@{/content/js/bootstrap.bundle.min.js}"></script>
 </body>
 
 </html>
